syntax = "proto3";

package app.demopb;

service Home {
    rpc Hello (HelloRequest) returns (HelloReply) {}
    rpc HelloStream(HelloRequest) returns (stream HelloStreamReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string data = 1;
}

message HelloStreamReply {
    string data = 1;
}